--- a/css/xApi.less
+++ b/css/xApi.less
@@ -1,4 +1,7 @@
-﻿.xApi-login .content {
+﻿input:invalid{
+    box-shadow:none;
+}
+.xApi-login .content {
     border-color: @xApi-container-border-color;
 }
 
